fix: fixed overflow styles for mobile modal

--- a/app/components/modals/Modal.module.scss
+++ b/app/components/modals/Modal.module.scss
@@ -16,8 +16,7 @@
 		min-height: 100vh;
 		position: relative;
 		padding: 10px 0;
-		overflow-y: scroll;
-
+		overflow-y: auto;
 		.modalHeader {
 			width: 100%;
 			padding: 10px;
